1.0.2post1
--------------------------------

- Windows/python2.4: fix bug that killing subprocesses would fail

1.0.2 
--------------------------------

- generalize channel-over-channel sending: you can now have channels 
  anywhere in a data structure (i.e. as an item of a container type).
  Add according examples.

- automatically close a channel when a remote callback raises 
  an exception, makes communication more robust because until 
  now failing callbacks rendered the receiverthread unuseable 
  leaving the remote side in-accessible.

- internally split socket gateways, speeds up popen-gateways
  by 10% (now at <50 milliseconds per-gateway on a 1.5 GHZ machine) 

- fix bug in channel.receive() that would wrongly raise a TimeoutError 
  after 1000 seconds (thanks Ronny Pfannschmidt) 

1.0.1
--------------------------------

- revamp and better structure documentation

- new method: gateway.hasreceiver() returns True 
  if the gateway is still receive-active. remote_status
  now only carries information about remote execution status.

- new: execnet.MultiChannel provides basic iteration/contain interface

- new: execnet.Group can be indexed by integer

- new: group.makegateway() uses group.default_spec if no spec is given
  and the execnet.default_group uses ``popen`` as a default spec. 

- have popen-gateways use imports instead of source-strings,
  also improves debugging/tracebacks, as a side effect
  popen-gateway startup can be substantially faster (>30%)

- refine internal gateway exit/termination procedure
  and introduce group.terminate(timeout) which will
  attempt to kill all subprocesses that did not terminate
  within time.

- EOFError on channel.receive/waitclose if the other
  side unexpectedly went away.  When a gateway exits 
  it now internally sends an explicit termination message
  instead of abruptly closing.  

- introduce a timeout parameter to channel.receive() 
  and default to periodically internally wake up